<resources>
    <string name="open_navigation">Open Drawer</string>
    <string name="close_navigation">Close Drawer</string>

    <string name="app_name">Androider</string>
    <string name="title_home">首页</string>
    <string name="title_struct">体系</string>
    <string name="title_project">项目</string>
    <string name="title_navigate">导航</string>

    <string name="article_share">分享</string>
    <string name="article_share_tips">我发现了一篇好文章，快来看一下吧！ url：</string>

    <string name="user_login">登录</string>
    <string name="user_logout">登出</string>
    <string name="username">用户名：</string>
    <string name="password">密码：</string>
    <string name="register">注册</string>
    <string name="remember_password">自动登录</string>
    <string name="unknown_user">未登录用户</string>
    
    <string name="create_username">请输入用户名</string>
    <string name="create_password">请输入密码</string>
    <string name="confirm_password">请确认密码</string>
    <string name="user_register">确认注册</string>

    <string name="hot_words">搜索热词</string>
    <string name="error_msg_search">没有发现相关内容呢( ╯□╰ )！赶紧搜一下吧~</string>
    <string name="guess_search">猜你想搜</string>

    <string name="author">作者：</string>
    <string name="category">分类：</string>
    <string name="time">时间：</string>

    <string name="load_error">加载错误，请稍后再试( ╯□╰ )！</string>

    <string name="about_setting">关于</string>
    <string name="about_this_app">关于Androider</string>
    <string name="about_user_suggest_setting">意见反馈</string>
    <string name="about_user_suggest_summary">点击提出意见</string>
    <string name="more_setting">更多</string>
    <string name="check_update_setting">检查更新</string>
    <string name="clear_setting">清除缓存</string>
    <string name="copyright">Developed By Hopkin © 2019</string>
    <string name="open_source">开源支持</string>
    <string name="about_details">Androider是个人基于“玩安卓”网站开放Api开发的开源学习软件，更多详细信息请点击
    “开源支持”了解</string>

    <string name="rxjava">RxJava2:2.1.6</string>
    <string name="retrofit">Retrofit2:2.3.0</string>
    <string name="gson">Gson:2.3.0</string>
    <string name="glide">Glide:4.6.1</string>
    <string name="kotlin">Kotlin:1.2.2.1</string>
    <string name="junit">Junit:4.1.2</string>
</resources>
