<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/about_setting"
        android:key="about_s">
        <Preference android:key="about"
            android:title="@string/about_this_app"
            android:summary="version-1.0.0"/>
        <Preference android:key="suggest"
            android:title="@string/about_user_suggest_setting"
            android:summary="@string/about_user_suggest_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/more_setting"
        android:key="more_s">
        <Preference android:key="check"
            android:title="@string/check_update_setting" />
        <Preference android:key="clear"
            android:title="@string/clear_setting" />
        <Preference android:key="open_source"
            android:title="@string/open_source"/>
        <Preference android:summary="@string/copyright"/>
    </PreferenceCategory>

</PreferenceScreen>