<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/btn_home"
        android:enabled="true"
        android:icon="@drawable/pic_home"
        android:title="@string/title_home"
        app:showAsAction="always"/>
    <item android:id="@+id/btn_struct"
        android:enabled="true"
        android:icon="@drawable/pic_struct"
        android:title="@string/title_struct"
        app:showAsAction="always"/>
    <item android:id="@+id/btn_project"
        android:enabled="true"
        android:icon="@drawable/pic_project"
        android:title="@string/title_project"
        app:showAsAction="always"/>
    <item android:id="@+id/btn_nav"
        android:enabled="true"
        android:icon="@drawable/pic_navigate"
        android:title="@string/title_navigate"
        app:showAsAction="always"/>
</menu>
