<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:contentPadding="10dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="2.5dp"
    app:cardBackgroundColor="@color/item_bg"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    xmlns:tools="http://schemas.android.com/tools">
    <ImageView
        android:id="@+id/imgPic"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:layout_marginEnd="0dp"
        android:padding="5dp"
        android:layout_gravity="center_vertical|end" />
    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <FrameLayout
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1">
           <ImageView
               android:id="@+id/article_status"
               android:layout_width="20dp"
               android:layout_height="20dp"
               android:layout_gravity="center"
               android:scaleType="fitCenter"
               android:src="@drawable/love_black"/>
       </FrameLayout>
       <LinearLayout
           android:id="@+id/article_details"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:layout_weight="10">
           <TextView
               android:id="@+id/article_title_item"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:textStyle="bold"
               android:maxLines="3"
               tools:text="这是一个标题"/>
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="bottom">
               <Button
                   android:id="@+id/article_tags_item"
                   android:layout_width="wrap_content"
                   android:layout_height="18dp"
                   android:layout_above="@id/category_occupy"
                   android:layout_alignParentStart="true"
                   android:layout_marginTop="10dp"
                   android:layout_marginEnd="10dp"
                   android:background="@drawable/article_item_btn"
                   style="@style/ArticleItemButtonTag"
                   android:visibility="visible"
                   tools:text="公众号"/>
               <TextView
                   android:id="@+id/author_occupy"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:layout_below="@+id/time_occupy"
                   android:text="@string/author"/>
               <TextView
                   android:id="@+id/author_item"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:layout_toEndOf="@id/author_occupy"
                   android:layout_alignBaseline="@+id/author_occupy"
                   tools:text="郭霖"/>
               <TextView
                   android:id="@+id/category_occupy"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:layout_alignParentStart="true"
                   android:layout_alignParentBottom="true"
                   android:text="@string/category"/>
               <TextView
                   android:id="@+id/article_category"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:layout_marginEnd="10dp"
                   android:layout_toEndOf="@+id/category_occupy"
                   android:layout_alignParentBottom="true"
                   android:textColor="@color/blue"
                   tools:text="项目"/>
               <TextView
                   android:id="@+id/time_occupy"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:layout_alignParentTop="true"
                   android:layout_alignParentStart="true"
                   android:layout_toEndOf="@+id/article_category"
                   android:text="@string/time" />
               <TextView
                   android:id="@+id/article_time"
                   android:layout_alignParentTop="true"
                   android:layout_toEndOf="@+id/time_occupy"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   tools:text="2019/01/20"/>
           </RelativeLayout>
       </LinearLayout>
   </LinearLayout>
</android.support.v7.widget.CardView>